# Botnet

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  Makefile  README.md  cheatsheet.md
include/: commands.h  file_exchange.h  launch_arguments.h  logging.h  receive_message.h  send_message.h  web_server.h
include/client/: client_constants.h  client_errors.h  client_utils.h
include/server/: console.h  hash_table.h  main.h  server_constants.h  server_errors.h  server_utils.h  web_server.h
projects_instructions/: README.md
src/: commands.c  file_exchange.c  launch_arguments.c  logging.c  receive_message.c  send_message.c  web_server.c
src/client/: client_errors.c  client_utils.c  main.c
src/server/: console.c  hash_table.c  main.c  server_errors.c  server_utils.c  web_server.c
static/css/: bot.css  commands.css  common.css  index.css  modal.css  notification.css  status.css  style.css
static/html/: bot.html  bots.html  commands.html  ddos.html  index.html  navbar.html  partial.command-modal.html  partial.decrypt-modal.html  partial.download-modal.html  partial.encrypt-modal.html  partial.flooding-modal.html  partial.navbar.html  partial.notification.html  partial.upload-modal.html  status.html
static/js/: bot.js  command-modal.js  fetch_bots.js  get-sysinfo.js  load-command-modal.js  load-decrypt-modal.js  load-download-modal.js  load-encrypt-modal.js  load-flooding-modal.js  load-navbar.js  load-upload-modal.js  update-bot.js
tests/: test_client.c  test_client_utils.c  test_commands.c  test_files.c  test_hash_table.c  test_receive_message.c  test_webserver.c
